fusionforge (5.2.50~-1) UNRELEASED; urgency=low

  * Bump version number after branching 5.2.

 -- Roland Mas <lolando@debian.org>  Mon, 26 Mar 2012 20:10:13 +0200

fusionforge (5.2~rc1-2) UNRELEASED; urgency=low

  * Use more of the system-provided Jquery.

 -- Roland Mas <lolando@debian.org>  Sat, 02 Jun 2012 18:04:21 +0200

fusionforge (5.2~rc1-1) unstable; urgency=low

  * New upstream pre-release 5.2rc1.
  * Ripped out all but the most important Debconf questions in order to
    simplify installation and get rid of the legacy fusionforge.conf
    configuration file (which is no longer created on new installs).
  * Stop shipping fusionforge-config manpage.

 -- Roland Mas <lolando@debian.org>  Fri, 01 Jun 2012 14:28:54 +0200

fusionforge (5.1.50+svn15558-1) experimental; urgency=low

  * New upstream SVN snapshot from the 5.2 stabilisation branch.
  * Generate initial list of countries and codes from the current known
    data (from isoquery) at build time (closes: #565240).  Thanks to David
    Prévot <david@tilapin.org> for the bulk of the patch.
  * Remove UCF-generated files on purge (closes: #672256).

 -- Roland Mas <lolando@debian.org>  Wed, 23 May 2012 14:34:18 +0200

fusionforge (5.1.50+svn15410-1) experimental; urgency=low

  * Really fix upgrade-db.php this time (closes: #668970).

 -- Roland Mas <lolando@debian.org>  Fri, 27 Apr 2012 16:11:34 +0200

fusionforge (5.1.50+svn15405-1) experimental; urgency=low

  * New upstream SVN snapshot from the 5.2 stabilisation branch.
  * Disable authcas plugin at least until phpCAS is packaged in Debian,
    thanks to Laurent Bonnaud (closes: #666908).
  * Fixed upgrade-db.php so it can run even without gforge-web-apache2
    installed, thanks to Andreas Beckmann (closes: #668970).

 -- Roland Mas <lolando@debian.org>  Fri, 27 Apr 2012 14:56:51 +0200

fusionforge (5.1.50+svn15228-1) experimental; urgency=low

  * New upstream SVN snapshot from the 5.2 stabilisation branch.
