@@ -7,8 +7,10 @@ fusionforge (5.2.50~-1) UNRELEASED; urgency=low
 fusionforge (5.2~rc1-2) UNRELEASED; urgency=low
 
   * Use more of the system-provided Jquery.
+  * Reinstate code running the Mediawiki SQL initialisation code from the
+    package's postinst.
 
- -- Roland Mas <lolando@debian.org>  Sat, 02 Jun 2012 18:04:21 +0200
+ -- Roland Mas <lolando@debian.org>  Wed, 06 Jun 2012 17:49:37 +0200
 
 fusionforge (5.2~rc1-1) unstable; urgency=low
 
